# PriorityEligibilityAPI

./: .replit  main.py  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: aws_deploy.md  build.toml
alembic/: env.py
alembic/versions/: 473cd5268579_create_member_table.py  7aa9ef86959c_create_plans_table.py
auth/: token_verification.py
member/: create_example_member.py  get_bearer_token.py  sample_curl.md
plan/: plan_model.py  plan_routes.py
